--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   body {
     background-color: #000;
     overflow: hidden;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia;
     user-select: none;
     background: linear-gradient(#008, #000);
     overflow: hidden;
@@ -16,34 +16,40 @@
     opacity: 0.3;
   }
 
-  canvas, .scont {
+  canvas,
+  .entity {
     padding: 0;
     margin: 0;
     position: relative;
-    transform-origin: 50% 100%;    
+    transform-origin: 0% 0%;
   }
 
-  .scont{
+  .entity.k4,
+  .entity.current {
     pointer-events: none;
   }
 
-  .pointer{
+  .pointer {
     animation: .5s blink infinite alternate-reverse;
   }
 
   .sprite {
     image-rendering: pixelated;
     padding: 0;
-    margin: 0;
+    margin: 0;    
   }
 
-  #Back{
+  .sprite:hover{
+    filter: brightness(1.2);
+  }
+
+  #Back {
     z-index: -100;
     pointer-events: none;
   }
 
   .wall,
-  .floor{
+  .floor {
     pointer-events: all;
   }
 
@@ -98,7 +104,7 @@
   }
 
   #Debug .csel {
-    padding: 10px;    
+    padding: 10px;
     display: inline-block;
     color: #fff;
     text-shadow: 1px 1px 1px #000;
@@ -113,8 +119,7 @@
     margin: 10px;
   }
 
-  #Debug #FPS{
-  }
+  #Debug #FPS {}
 
   @keyframes blink {
     0% {
@@ -136,12 +141,59 @@
     }
   }
 
+  .thought {
+    animation: 3s flow-up forwards linear;
+  }
+
+
+  .aspect{
+    font-size: 20;
+  }
+
+  .aspect canvas{
+    padding-right: 10px;
+    transform: scale(2);
+    transform-origin: 50% 80%;
+  }
+
+  .num{
+    min-width: 50px;
+  }
+
+  @keyframes flow-up {
+
+    0%,
+    100% {
+      opacity: 0;
+    }
+
+    20% {
+      opacity: 1;
+    }
+  }
+
   .blink {
     animation: blink infinite alternate .5s;
   }
+
+  .dn {
+    display: none;
+  }
+
+  #Info {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    color: #fff;
+    background: #0003;
+    border-radius: 4px;
+    border-right: solid 1px #fff4;
+    border-top: solid 1px #fff4;
+    padding: 0px 20px 20px 20px;
+  }
 </style>
 
-<div style="display: none;">
+<div class=dn>
   <svg>
     <defs id="DEFS">
       <filter id=_N>
@@ -173,12 +225,10 @@
 
 <!--<div id=BG></div>-->
 
-<div id=Debug>
+<div id=Debug class=dn>
   <div id=Preview></div>
   <div id=FPS></div>
 </div>
-
-<div id=Info></div>
 
 <div id=Cam>
   <div id=Scene>
@@ -186,5 +236,8 @@
     <canvas id=Front></canvas>
   </div>
 </div>
+
+<div id=Info><h1></h1></div>
+
 
 <script src=bundle.js></script>
