--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,6 @@
 
   .etitle {
     color: #fff;
-    text-shadow: 1px 1px 1px #000;
     pointer-events: none;
 
     position: absolute;
@@ -218,8 +217,16 @@
     transform: scaleX(-1);
   }
 
+  .etitle, .red, .grn{
+    text-shadow: .2px .2px .2px #000;    
+  }
+
   .red {
     color: #f00;
+  }
+
+  .grn {
+    color: #0f0;
   }
 
 
